<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <!-- <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" /> -->
        <item
            android:id="@+id/gmaps"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/GoogleMaps" />
        <item
            android:id="@+id/dplaylist"
            android:icon="@drawable/music_icon"
            android:title="@string/Playlist" />
        <item
            android:id="@+id/anal"
            android:icon="@drawable/analytics"
            android:title="@string/Analytics" />
    </group>
</menu>
